src/test/ui/suggestions/type-ascription-with-fn-call.stderr
error[E0573]: expected type, found function `f`
  --> $DIR/type-ascription-with-fn-call.rs:15:5
   |
14 |     f()  :
   |          - help: did you mean to use `;` here instead?
15 |     f();
   |     ^^^
   |     |
   |     not a type
   |     expecting a type here because of type ascription

error: aborting due to previous error

